# ChangeLog for genkernel
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  04 Feb 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc:
  Comment out the exec line for console=*, since it seems to blow up when
  the param isn't a true device node, such as ttyS0,115200n8

  19 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts,
  Remove detect_sbp2_devices() for gentoo bug #239474

  16 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> genkernel.conf:
  Add commented out DISKLABEL=yes option for gentoo bug #229847

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO:
  Added more verbosity to the auto-detection section.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS:
  Updated the AUTHORS section and the header for the ChangeLog, to reflect
  that individual authors now retain their copyright to code they submit.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO:
  Added a note about Security Tokens, cleaned up the block device section, and
  added a section about autodetection.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> HACKING:
  Adding a note about contacting me to HACKING.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO:
  Adding multipath support is really two different functions, so split them.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO:
  Adding a note about documenting the code paths.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO:
  Adding new boot support information to the TODO.

  05 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO, genkernel:
  Version bump to 3.4.10.903 to resolve bug #250330.

  31 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh:
  Add case for arm* in get_official_arch()

  31 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> netboot/busy-config:
  Enable CONFIG_MKSWAP for netboot busybox
