@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
 # Distributed under the GPL v2
 
+  20 Feb 2009; Andrew Gaffney <agaffney@gentoo.org> arch/sparc64/config.sh,
+  gen_compile.sh, gen_funcs.sh, gen_package.sh:
+  Add support for multiple possible kernel binary paths for gentoo bug
+  #255085
+
   04 Feb 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc:
   Comment out the exec line for console=*, since it seems to blow up when
   the param isn't a true device node, such as ttyS0,115200n8
